fix: fix bug where some rows of the ActivitiesCalendar sometimes could not be selected because too small

--- a/src/components/activities/ActivitiesCalendar/ActivitiesCalendar.scss
+++ b/src/components/activities/ActivitiesCalendar/ActivitiesCalendar.scss
@@ -17,6 +17,14 @@
   z-index: 0 !important;
 }
 
+.rbc-time-gutter .rbc-time-slot {
+  min-height: 12px;
+}
+
+.rbc-day-slot .rbc-time-slot {
+  min-height: 15px;
+}
+
 .rbc-toolbar {
   display: block !important;
 }
